--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,3 +1,10 @@
-autopep8==1.6.0
-pycodestyle==2.8.0
-toml==0.10.2
+astroid==3.0.3
+colorama==0.4.6
+dill==0.3.8
+isort==5.13.2
+mccabe==0.7.0
+platformdirs==4.2.0
+pylint==3.0.3
+tomli==2.0.1
+tomlkit==0.12.3
+typing_extensions==4.9.0
